--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -153,7 +153,7 @@
        <toolbar name="CDownloadsWnd">
                <button id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="Άνοιξε ή παίξε"/>
                <button id="ID_DOWNLOADS_FILE_DELETE" text="Διέγραψε το αρχείο"/>
-               <button id="ID_DOWNLOADS_LAUNCH" text="Προηγούμενο αρχείο"/>
+               <button id="ID_DOWNLOADS_LAUNCH" text="Επισκόπιση αρχείου"/>
                <separator/>
                <button id="ID_DOWNLOADS_RESUME" text="Ξανα-άρχισε το αρχείο"/>
                <button id="ID_DOWNLOADS_PAUSE" text="Διέκοψε το αρχείο"/>
@@ -493,7 +493,7 @@
                        <menu text="Για Π_ροχωρημένους">
                                <item id="ID_VIEW_SYSTEM" text="Σ_ύστημα" shortcut="F11"/>
                                <item id="ID_VIEW_NEIGHBOURS" text="Γ_είτονες" shortcut="F2"/>
-                               <item id="ID_VIEW_DOWNLOADS" text="_Κατεύασμα" shortcut="F3"/>
+                               <item id="ID_VIEW_DOWNLOADS" text="_Κατέβασμα" shortcut="F3"/>
                                <item id="ID_VIEW_UPLOADS" text="_Ανέβασμα" shortcut="F4"/>
                                <item id="ID_VIEW_LIBRARY" text="_Βιβλιοθήκη" shortcut="F5"/>
                                <item id="ID_VIEW_MEDIA" text="_Μέσο αναπαραγωγής" shortcut="F6"/>
@@ -569,7 +569,7 @@
                <menu text="_Επισκόπηση">
                        <item id="ID_VIEW_SYSTEM" text="_Σύστημα" shortcut="F11"/>
                        <item id="ID_VIEW_NEIGHBOURS" text="_Γείτονες" shortcut="F2"/>
-                       <item id="ID_VIEW_DOWNLOADS" text="_Κατεύασμα" shortcut="F3"/>
+                       <item id="ID_VIEW_DOWNLOADS" text="_Κατέβασμα" shortcut="F3"/>
                        <item id="ID_VIEW_UPLOADS" text="_Ανέβασμα" shortcut="F4"/>
                        <item id="ID_VIEW_LIBRARY" text="_Βιβλιοθήκη" shortcut="F5"/>
                        <item id="ID_VIEW_MEDIA" text="_Μέσο αναπαραγωγής" shortcut="F6"/>
